--- a/kitty.conf
+++ b/kitty.conf
@@ -49,3 +49,10 @@ background_opacity 0.95
 #copy-paste
 map f1 copy_to_buffer a
 map f2 paste_from_buffer a
+
+#moving wondows
+map ctrl+shift+1 next_window
+map ctrl+shift+9 previous_window
+
+#border with
+window_border_with 3
